- "Crop" the .intro-container when <=600 to maintain the visually aligned .intro-image and to avoid the horizontal scroll caused by its right negative margin. - .intro-image has 100% width now instead of hardcoded 350px - Removed extra relative positioning for .intro-container - There's never a .menu within .intro-container
#524

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -57,7 +57,6 @@ p {
 .intro-container {
   color: #FFFFFF;
   grid-area: intro;
-  position: relative;
   display: grid;
   grid-template-areas:
     'intro image';
@@ -431,23 +430,6 @@ p {
 
 /* Mobile View */
 @media (max-width: 600px) {
-  .intro-container .menu li {
-    list-style: none;
-    margin: 30px;
-  }
-
-  .intro-container .menu a {
-    text-decoration: none;
-    color: #f2f2f2;
-  }
-
-  .intro-container .menu > div {
-    display: flex;
-    width: 90%;
-    justify-content: space-between;
-    margin: 40px 0px 40px 0px;
-  }
-
   .intro-container {
     grid-template-areas:
       'year'
@@ -455,12 +437,7 @@ p {
       'image';
     justify-items: center;
     justify-content: center;
-  }
-
-  .intro-container .menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    overflow: hidden;
   }
 
   .intro {
@@ -496,9 +473,9 @@ p {
 
   .intro-image {
     display: block;
+    max-width: 100%;
     margin-top: 60px;
     margin-right: -46px;
-    width: 350px;
   }
 
   .intro-image-2019 {
